--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 baseurl: ""
-url: 'http://0.0.0.0:4000/'
+# url: 'http://0.0.0.0:4000/'
+url: 'http://blazecup.no/'
 destination: docs
 markdown: kramdown
 collections:
