--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-docs/
+.sass-cache
+.jekyll-metadata
+docs/feed.xml
+_site
+.idea
+.vscode
+.sass-cache
+.jekyll-metadata
+.DS_Store
+node_modules
+release-builds
